# storyteller

./: README.md  main.py  pyproject.toml
src/core/database/: db_client.py  storyteller.db
src/core/models/: models.py
src/core/prompts/: prompts.py
src/core/tools/: db_tool.py
src/middleware/: middleware.py
src/services/: agent.py
